Improved wording for the "logdir" comment in conf.ini

--- a/conf.ini
+++ b/conf.ini
@@ -1,5 +1,5 @@
 [logging]
-# Default directory for logs is the script PWD.
+# Default directory for log files is the script PWD.
 logdir = logs
 
 # Severity level for logging to console and file. Console
